[package]
name = "kgdata"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kgdata"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
bincode = "1.3.3"
bzip2 = "0.4.3"
criterion = "0.4.0"
env_logger = "0.9.0"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
hashbrown = { version = "0.13.2", features = ["serde"] }
log = "0.4.17"
pyo3 = { version = "0.16.5", features = ["anyhow"] }
pythonize = "0.16.0"
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
rstest = "0.13.0"
tempfile = "3.3.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[[bench]]
name = "rc_vs_py"
harness = false