[package]
name = "kgdata"
version = "3.1.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/binh-vu/kgdata"
repository = "https://github.com/binh-vu/kgdata"
license-file = "LICENSE"
description = "Library to process dumps of knowledge graphs (Wikipedia, DBpedia, Wikidata)"
keywords = ["knowledge-graph", "wikidata", "wikipedia", "dbpedia"]
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kgdata"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
bincode = "1.3.3"
bzip2 = "0.4.3"
env_logger = "0.9.0"
flate2 = { version = "1.0.24", features = [
    "zlib-ng",
], default-features = false }
hashbrown = { version = "0.13.2", features = ["serde"] }
log = "0.4.17"
pyo3 = { version = "0.19.1", features = ["anyhow", "multiple-pymethods"] }
rayon = "1.5.3"
rocksdb = "0.20.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
rstest = "0.13.0"
tempfile = "3.3.0"
criterion = "0.4.0"

[features]
extension-module = ["pyo3/extension-module"]

# [[bench]]
# name = "rc_vs_py"
# harness = false
