[tool.poetry]
name = "kgdata"
version = "3.1.1"
description = "Library to process dumps of knowledge graphs (Wikipedia, DBpedia, Wikidata)"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
homepage = "https://github.com/binh-vu/kgdata"
repository = "https://github.com/binh-vu/kgdata"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.8.0"
tqdm = "^4.64.0"
beautifulsoup4 = "^4.9.3"
cityhash = ">=0.4.2"
pyspark = "3.3.0"
loguru = "^0.6.0"
rdflib = "^6.1.1"
six = "^1.16.0"
"ruamel.yaml" = "^0.17.9"
chardet = "^4.0.0"
ujson = "^5.1.0"
redis = "^3.5.3"
numpy = "^1.22.3"
fastnumbers = "^3.1.0"
requests = "^2.28.0"
sem-desc = "^3.6.0"
click = ">=8.0.0,<=8.0.4"
parsimonious = "^0.8.1"
hugedict = "^2.5.2"
rsoup = "^2.5.1"
lxml = "^4.9.0"
pyserini = "^0.17.0"
ray = "^2.0.0"

[tool.poetry.dev-dependencies]
python-dotenv = ">=0.19.0"
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
