[project]
name = "kgdata"
version = "7.0.1"
description = "Library to process dumps of knowledge graphs (Wikipedia, DBpedia, Wikidata)"
readme = "README.md"
authors = [{ name = "Binh Vu", email = "binh@toan2.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.10"

dependencies = [
    'orjson >= 3.9.0, < 4.0.0',
    'tqdm >= 4.64.0, < 5.0.0',
    'beautifulsoup4 >= 4.9.3, < 5.0.0',
    'loguru >= 0.7.0, < 0.8.0',
    'rdflib >= 7.0.0, < 8.0.0',
    'six >= 1.16.0, < 2.0.0',
    'ruamel.yaml >= 0.17.21, < 0.18.0',
    'chardet >= 5.0.0, < 6.0.0',
    'ujson >= 5.5.0, < 6.0.0',
    'redis >= 3.5.3, < 4.0.0',
    'numpy >= 1.22.3, < 2.0.0',
    'requests >= 2.28.0, < 3.0.0',
    'sem-desc >= 6.7.2, < 7.0.0',
    'click >= 8.1.3, < 9.0.0',
    'parsimonious >= 0.8.1, < 0.9.0',
    'hugedict >= 2.12.10, < 3.0.0',
    'rsoup >= 3.1.7, < 4.0.0',
    'lxml >= 4.9.0, < 5.0.0',
    'ray >= 2.0.1, < 3.0.0',
    'pqdict >= 1.3.0, < 2.0.0',
    'ftfy >= 6.1.3, < 7.0.0',
]

[project.urls]
homepage = "https://github.com/binh-vu/kgdata"
repository = "https://github.com/binh-vu/kgdata"

[project.optional-dependencies]
dev = [
    'python-dotenv >= 0.19.0, < 0.20.0',
    'pytest >= 7.1.3, < 8.0.0',
    'black >= 22.10.0, < 23.0.0',
]
spark = ['pyspark >= 3.5.0, < 4.0.0']
all = ["kgdata[dev,spark]"]

[tool.maturin]
module-name = "kgdata.core"
features = ["extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
