[tool.poetry]
name = "kgdata"
version = "7.0.9"
description = "Library to process dumps of knowledge graphs (Wikipedia, DBpedia, Wikidata)"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
packages = [{ include = "kgdata" }]

readme = "README.md"
homepage = "https://github.com/binh-vu/kgdata"
repository = "https://github.com/binh-vu/kgdata"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
orjson = "^3.9.0"
tqdm = "^4.64.0"
beautifulsoup4 = "^4.9.3"
loguru = "^0.7.0"
rdflib = "^7.0.0"
six = "^1.16.0"
"ruamel.yaml" = "^0.17.21"
chardet = "^5.0.0"
ujson = "^5.5.0"
redis = "^3.5.3"
numpy = "^2.1.1"
requests = "^2.28.0"
sem-desc = "^6.11.2"
click = "^8.1.3"
parsimonious = "^0.8.1"
hugedict = "^2.12.10"
rsoup = "^3.1.7"
lxml = "^4.9.0"
pqdict = "^1.3.0"
ftfy = "^6.1.3"
kgdata_core = "^4.0.1"
ray = { version = "^2.0.1", optional = true }
pyspark = { version = "^3.5.0", optional = true }

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.19.0"
pytest = "^8.3.2"

[tool.poetry.extras]
dev = ["python-dotenv", "pytest"]
pyspark = ["pyspark"]
ray = ["ray"]
all = ["python-dotenv", "pytest", "pyspark", "ray"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
