[package]
name = "kgbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kgbench"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.1", features = ["anyhow", "multiple-pymethods"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
env_logger = "0.10.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
kgdata = { path = "../..", default-features = false }
serde-jsonlines = "0.4.0"
