[project]
name = "kgbench"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
optional-dependencies = {}

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"
