[package]
name = "benchio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
kgdata = { path = "../../../" }
num_cpus = "1.16.0"
procspawn = "1.0.0"
rayon = "1.8.0"
